--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "start": "node index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/smmartin1/movie_api.git"
@@ -18,8 +19,11 @@
   },
   "homepage": "https://github.com/smmartin1/movie_api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
